# python_for_data_science

./: .gitignore  README.md  encrypt_engine.py  p_env.sh  pdf_reader.py  requirements.txt
0_starting/: Dockerfile  build_docker.sh  clean_docker.sh  requirements.txt
0_starting/ex_00/: Hello.py
0_starting/ex_01/: format_ft_time.py
0_starting/ex_02/: find_ft_type.py
0_starting/ex_03/: NULL_not_found.py
0_starting/ex_04/: whatis.py
0_starting/ex_05/: building.py
0_starting/ex_06/: filterstring.py  ft_filter.py
0_starting/ex_07/: sos.py
0_starting/ex_08/: Loading.py
0_starting/ex_09/: test.py
0_starting/ex_09/ft_package/: LICENCE  README.md  install_packages.sh  pyproject.toml
0_starting/ex_09/ft_package/src/ft_package/: count_in_list.py
1_array/ex_00/: give_bmi.py  tester.py
1_array/ex_01/: array2D.py  tester.py
1_array/ex_02/: load_image.py
1_array/ex_03/: load_image.py  zoom.py
1_array/ex_04/: load_image.py  rotate.py
1_array/ex_05/: pimp_image.py  tester.py
2_datatable/ex01/: aff_file.py  load_csv.py
2_datatable/subject/: income_per_person_gdppercapita_ppp_inflation_adjusted.csv  life_expectancy_years.csv  population_total.csv
_docker/: Dockerfile  clean_docker.sh
_notes/: 3_numpy.py
_notes/pandas/: 1_basic.ipynb  1_basics.py  2_dataframe.ipynb
knowledge/: 1_iterators.py  2_create_module.md
