[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
readme = "README.md"
license = "MIT"
license-files = ["LICENCE"]
description = "A sample test package"
authors = [
	{ name = "flverge", email = "flverge@student.42perpignan.com" }
]

[project.urls]
Homepage = "https://github.com/eagle/ft_package"